--- a/app/globals.css
+++ b/app/globals.css
@@ -35,6 +35,12 @@ a {
   transition: opacity 0.3s cubic-bezier(0.23, 1, 0.32, 1) 0s;
 }
 
+.projectCursor {
+  z-index: -1;
+  background-color: transparent;
+  mix-blend-mode: normal;
+}
+
 .addCursor {
   opacity: 1;
 }
